radarr_dutch/deployment exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr_dutch-exporter
spec:
  selector:
    matchLabels:
      app: radarr_dutch-exporter
      release: radarr_dutch-exporter
  template:
    metadata:
      labels:
        app: radarr_dutch-exporter
        release: radarr_dutch-exporter
    spec:
 
      containers:
      
      - image: ghcr.io/onedr0p/exportarr
        imagePullPolicy: Always
        name: radarr_dutch-exporter
        ports:
        - containerPort: 9707
          name: metrics
          protocol: TCP
        args:
          - "radarr"
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
