radarr_dutch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr_dutch-service    # < name of the service
  namespace: radarr_dutch # < namespace where place the deployment and pods
spec:
  selector:
    app: radarr_dutch # < reference to the deployment (connects with this deployment)
  ports:
    - name: webinterface
      protocol: TCP
      port: 7878
