radarr_dutch/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-dutch-ingress
  namespace: radarr-dutch
  annotations: 
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr-dutch.olympus.mangelschots.org`)
      kind: Rule
      services:
        - name: radarr-dutch-service
          port: 7878
  tls:
    secretName: olympus-mangelschots-org-tls
